fixed attribution and images in L1

--- a/_toc.yml
+++ b/_toc.yml
@@ -14,8 +14,8 @@
 - part: Assignments
   chapters:
     - file: markdown
-    - file: notebooks
+    - file: markdown
 
 - part: References
   chapters:
-    - file: attribution
+    - file: things_to_know//attribution
