Added L4 and updated LOs

--- a/_toc.yml
+++ b/_toc.yml
@@ -11,6 +11,7 @@
     - file: lectures/lecture1
     - file: lectures/lecture2
     - file: lectures/lecture3
+    - file: lectures/lecture4
 
 
 - part: References
