--- a/_toc.yml
+++ b/_toc.yml
@@ -12,6 +12,7 @@
     - file: lectures/lecture2
     - file: lectures/lecture3
     - file: lectures/lecture4
+    - file: lectures/lecture5
 
 - part: References
   chapters:
