--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 # See https://jupyterbook.org/content/execute.html
 only_build_toc_files: true
 
+execute:
+  timeout: -1
+  allow_errors: true
+
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
