--- a/_toc.yml
+++ b/_toc.yml
@@ -15,6 +15,7 @@
     - file: lectures/lecture5
     - file: lectures/lecture6
     - file: lectures/lecture7
+    - file: lectures/lecture8
 
 - part: References
   chapters:
