--- a/_toc.yml
+++ b/_toc.yml
@@ -17,6 +17,7 @@
     - file: lectures/lecture7
     - file: lectures/lecture8
     - file: lectures/lecture9
+    - file: lectures/lecture10
 
 - part: References
   chapters:
