Update ToC and attributions

--- a/_toc.yml
+++ b/_toc.yml
@@ -11,14 +11,14 @@ parts:
   chapters:
   - file: lectures/lecture1
   - file: lectures/lecture2
-  - file: lectures/lecture3
-  - file: lectures/lecture4
-  - file: lectures/lecture5
-  - file: lectures/lecture6
-  - file: lectures/lecture7
-  - file: lectures/lecture8
-  - file: lectures/lecture9
-  - file: lectures/lecture10
+  # - file: lectures/lecture3
+  # - file: lectures/lecture4
+  # - file: lectures/lecture5
+  # - file: lectures/lecture6
+  # - file: lectures/lecture7
+  # - file: lectures/lecture8
+  # - file: lectures/lecture9
+  # - file: lectures/lecture10
 - caption: References
   chapters:
   - file: things_to_know/attribution
