--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: BAIT 509 - Business Applications of Machine Learning
-author: Hayley Boyce
-email: hfboyce@cs.ubc.ca
+title: BAIT 509<br>Business Applications of Machine Learning
+author: Joel Ostblom
 logo: imgs/bait_logo.png
 description: >- # this means to ignore newlines until "baseurl:"
   This is the lecture content for BAIT 509, a course of the Sauder School of Business Masters of Business Analytics program.
@@ -21,10 +20,10 @@ latex:
   latex_documents:
     targetname: book.tex
 
-launch_buttons:
-  notebook_interface : "classic" # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url      : "https://mybinder.org"
-  thebe              : true
+# launch_buttons:
+  # notebook_interface : "classic" # The interface interactive links will activate ["classic", "jupyterlab"]
+  # binderhub_url      : "https://mybinder.org"
+  # thebe              : true
 
 # Information about where the book exists on the web
 repository:
@@ -37,8 +36,8 @@ repository:
 html:
   favicon: imgs/bait_logo.png
   home_page_in_navbar: false
-  use_edit_page_button: true
-  use_repository_button: true
+  use_edit_page_button: false
+  use_repository_button: false
   use_issues_button: true
   baseurl: https://bait509-ubc.github.io/BAIT509/intro.html
 parse:
@@ -47,7 +46,7 @@ parse:
     # including those that are enabled by default!
     - html_image
     - dollarmath
-    
+
 sphinx:
     extra_extensions:
         - sphinx_thebe
