--- a/_toc.yml
+++ b/_toc.yml
@@ -12,7 +12,7 @@ parts:
   - file: lectures/lecture1
   - file: lectures/lecture2
   - file: lectures/lecture3
-  # - file: lectures/lecture4
+  - file: lectures/lecture4
   # - file: lectures/lecture5
   # - file: lectures/lecture6
   # - file: lectures/lecture7
